--- a/cashfree-payments.html
+++ b/cashfree-payments.html
@@ -214,12 +214,29 @@
         <input id="phone" placeholder="Phone Number" />
 
         <button id="payBtn">Pay Now</button>
+        <div
+          id="paymentStatus"
+          style="margin-top: 10px; font-weight: 600"
+        ></div>
+      </div>
+
+      <div class="section">
+        <h2>My Purchases</h2>
+        <button onclick="loadUserPurchases()">Load My Purchases</button>
+        <div id="purchases"></div>
       </div>
     </div>
 
     <script>
       const cashfree = Cashfree({ mode: "sandbox" });
       let selectedService = null;
+
+      const statusEl = document.getElementById("paymentStatus");
+
+      function setStatus(message, success = true) {
+        statusEl.innerText = message;
+        statusEl.style.color = success ? "green" : "red";
+      }
 
       async function loadServices() {
         const servicesEl = document.getElementById("services");
@@ -233,7 +250,10 @@
         services.forEach((s) => {
           const div = document.createElement("div");
           div.className = "service";
-          div.innerHTML = `<strong>${s.title}</strong><br>${s.currency} ${s.price}`;
+          div.innerHTML = `
+        <strong>${s.title}</strong><br>
+        ${s.currency} ${s.price}
+      `;
 
           div.onclick = () => {
             document
@@ -249,9 +269,45 @@
         });
       }
 
+      async function loadUserPurchases() {
+        const userId = document.getElementById("userId").value;
+        if (!userId) {
+          setStatus("Enter user ID first", false);
+          return;
+        }
+
+        const purchasesEl = document.getElementById("purchases");
+        purchasesEl.innerHTML = "Loading...";
+
+        const res = await fetch(
+          `http://localhost:6767/api/services/user?userId=${userId}`,
+        );
+
+        const data = await res.json();
+        console.log(data);
+        if (!data || data.length === 0) {
+          purchasesEl.innerHTML = "<p>No purchases found</p>";
+          return;
+        }
+
+        purchasesEl.innerHTML = "";
+
+        data.forEach(({ services, payments, created_at }) => {
+          const div = document.createElement("div");
+          div.className = "service";
+          div.innerHTML = `
+        <strong>${services?.title || "Service"}</strong><br>
+        Amount: ₹${payments?.amount || 0}<br>
+        Status: ${payments?.status}<br>
+        Purchased: ${new Date(created_at).toLocaleString()}
+      `;
+          purchasesEl.appendChild(div);
+        });
+      }
+
       document.getElementById("payBtn").addEventListener("click", async () => {
         if (!selectedService) {
-          alert("Select a service first");
+          setStatus("Select a service first", false);
           return;
         }
 
@@ -259,9 +315,11 @@
         const userId = document.getElementById("userId").value;
 
         if (!phone || !userId) {
-          alert("User ID and phone are required");
+          setStatus("User ID and phone are required", false);
           return;
         }
+
+        setStatus("Creating order...");
 
         const response = await fetch(
           "http://localhost:6767/api/payment/create-order",
@@ -279,7 +337,7 @@
 
         const data = await response.json();
         if (!data.payment_session_id) {
-          alert("Order creation failed");
+          setStatus("Order creation failed", false);
           return;
         }
 
@@ -290,16 +348,16 @@
           })
           .then(async (result) => {
             if (result.error) {
-              alert("❌ Payment cancelled");
+              setStatus("Payment cancelled", false);
               return;
             }
 
             if (!result.paymentDetails) {
-              alert("⏳ Payment processing. You’ll be notified shortly.");
+              setStatus("Payment processing...");
               return;
             }
 
-            const orderId = result.paymentDetails.orderId;
+            const orderId = data.order_id;
 
             const verify = await fetch(
               `http://localhost:6767/api/payment/verify/${orderId}`,
@@ -307,15 +365,16 @@
 
             const verifyData = await verify.json();
 
-            if (verifyData.order_status === "PAID") {
-              alert("✅ Payment Successful");
+            if (verifyData.payment?.status === "SUCCESS") {
+              setStatus("Payment Successful ✅");
+              loadUserPurchases();
             } else {
-              alert("❌ Payment Failed or Pending");
+              setStatus("Payment Failed or Pending ❌", false);
             }
           })
           .catch((e) => {
-            console.error("Payment error:", e);
-            alert("❌ Payment failed. Please try again.");
+            console.error(e);
+            setStatus("Payment failed. Try again.", false);
           });
       });
     </script>
